--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+<p><a href="https://ivanfokin150-sys.github.io/zadania_fokin/">W R Ó Ć</a></p>
 <br>
 
 <h1>poniżej są trzy wyliczenia z różnymi znakami wyliczenia</h1>
@@ -62,4 +63,5 @@
 </ol></font>
 
 </body>
+
 </html>
